<resources>
    <string name="app_name">SpotifyStatistics</string>
    <string name="menuDescription">Menu inside Toolbar</string>
    <string name="home">Home</string>
    <string name="logo">Logo of the App</string>
    <string name="log_in">Login to Spotify</string>
    <string name="install">Install Spotify</string>
    <string name="top">Top</string>
    <string name="statistic">Statistics</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="profilePicDesc">Picture of profile</string>
    <string name="username">Username on Spotify</string>
    <string name="somethin">Something else</string>
    <string name="followedA">Followed Artists</string>
    <string name="createPlaylist">Create Playlist</string>
    <string name="info">Info</string>
    <string name="stats">Stats</string>
    <string name="artist_pic">Pic of an artist</string>
</resources>