<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:id="@+id/mainContainerLogIn">

    <androidx.cardview.widget.CardView
        android:id="@+id/logoOnLogInContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/mainContainerLogIn"
        app:layout_constraintStart_toStartOf="@id/mainContainerLogIn"
        app:layout_constraintEnd_toEndOf="@id/mainContainerLogIn"
        android:layout_marginTop="200dp"
        app:cardCornerRadius="90dp"
        app:cardElevation="8dp"
        >

        <ImageView
            android:id="@+id/logoOnLogInScreen"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/music_logo"
            android:scaleType="centerCrop"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/nameOfAppOnLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logoOnLogInContainer"
        app:layout_constraintStart_toStartOf="@id/mainContainerLogIn"
        app:layout_constraintEnd_toEndOf="@id/mainContainerLogIn"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/lobster_regular"
        android:textColor="@color/pink_from_logo"
        android:textSize="42sp"
        android:text="@string/app_name" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        app:layout_constraintTop_toBottomOf="@id/nameOfAppOnLogIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/installSpotifyButton"
        android:textSize="28sp"
        android:fontFamily="@font/lobster_regular"
        android:backgroundTint="@color/pink_from_logo"
        android:textColor="@color/purple"/>

    <Button
        android:id="@+id/installSpotifyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/install"
        app:layout_constraintTop_toBottomOf="@id/logInButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/purple"
        android:textSize="28sp"
        android:fontFamily="@font/lobster_regular"
        android:backgroundTint="@color/pink_from_logo"/>
</androidx.constraintlayout.widget.ConstraintLayout>